src/app/shared/components/header/header.component.scss
@import '../../../../assets/styles/abstracts/_variables.scss';

.header {
  padding-right: 2.4rem;
  display: flex;
  justify-content: space-between;
  &-spacer {
    padding: 0 7rem 0 4rem;
  }
  &-left {
    .htext {
      font-size: 2.8rem;
      font-family: $secondary-font;
      &-top {
        color: $color-header;
        margin-bottom: 0.5rem;
      }
      &-bottom {
        color: $color-tertiary;
      }
    }
    display: flex;
    justify-content: flex-start;
    align-items: center;
  }
  &-right {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    font-family: $secondary-font;

    .htext {
      color: $color-tertiary;
      line-height: 3rem;
    }
    .auth {
      display: flex;
      align-items: center;
      color: $color-tertiary;
      font-weight: 700;
      font-size: 1.6rem;
    }
    .user {
      display: flex;
      align-items: center;
      &-welcome {
        cursor: pointer;
        margin-left: 0.5rem;
        text-decoration: underline;
        text-underline-position: under;
      }
    }
    .logout {
      display: flex;
      justify-content: center;
      align-items: center;
      cursor: pointer;
      .exit-icon {
        padding-right: 0.25rem;
      }
    }
    .primary-contact {
      display: flex;
      justify-content: center;
    }
    .office-timings {
      color: $color-tertiary;
      padding-top: 0.5rem;
    }
    .text-right {
      text-align: right;
    }
  }
  &-logo {
    height: 9.5rem;
    width: 16.5rem;
  }
  &-divider {
    border: 2px solid $color-sub-header;
    opacity: 0.2;
    margin: 0 2rem;
    min-height: 5.25rem;
  }
}

